test/testData/parser/negative/incorrectDeclaration2.c

/ TODO



int []ff {

}

int foo,() {

}
